fix: z-index виджета

--- a/src/scss/components/widget/_widget.scss
+++ b/src/scss/components/widget/_widget.scss
@@ -26,7 +26,7 @@
 
 .widget {
   position: fixed;
-  z-index: 50;
+  z-index: 10;
   right: 25px;
   bottom: 25px;
 
